[package]
name = "cortexm-threads"
version = "0.1.1"
authors = ["nk"]
edition = "2018"
license="MIT"
description = "A simple library for context-switching on ARM Cortex-M ( 0, 0+, 3, 4, 4F ) micro-processors"

[build-dependencies]
cc = "1.0.28"

[dependencies]
#cortex-m-semihosting = "0.3.2"
#cortex-m = "0.5.8"
